<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:clipChildren="false">


        <LinearLayout
            android:id="@+id/mainLayout"
            android:orientation="vertical"
            android:padding="4dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/tvCatalogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:paddingBottom="2dp"
                android:text="@string/catalog_title"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold"
                android:gravity="center"/>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:focusable="false">
                <TextView
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:clickable="false"
                    android:focusable="false"
                    android:layout_height="wrap_content"
                    android:text="@string/column_name_length"
                    android:layout_weight="5"/>
                <TextView
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/column_price"
                    android:layout_weight="1"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerCatalog"
                android:clickable="false"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <TextView
                android:textSize="14sp"
                android:textStyle="bold"
                android:textColor="#000000"
                android:gravity="center"
                android:id="@+id/tvInvoiceTitle"
                android:paddingTop="6dp"
                android:paddingBottom="2dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/invoice_title"/>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingBottom="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/column_invoice_name"
                    android:layout_weight="3"/>
                <TextView
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/column_price"
                    android:layout_weight="1"/>
                <TextView
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/column_quantity"
                    android:layout_weight="1"/>
                <TextView
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:gravity="center"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/column_sum"
                    android:layout_weight="1"/>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerInvoice"
                android:scrollbars="vertical"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"/>
            <LinearLayout
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:id="@+id/layoutTotals"
                android:padding="4dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_total"
                    android:paddingStart="4dp"

                    android:paddingEnd="4dp"/>
                <TextView
                    android:gravity="start"
                    android:id="@+id/tvTotalSum"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"
                    android:layout_weight="1"/>
                <TextView
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_discount"
                    android:paddingStart="4dp"
                    android:paddingEnd="4dp"/>
                <EditText
                    android:id="@+id/etDiscount"
                    android:layout_width="45dp"
                    android:layout_height="48dp"
                    android:textSize="14sp"
                    android:hint="@string/discount_hint"
                    android:inputType="numberDecimal"
                    android:gravity="center"
                    android:padding="0dp"
                    android:minWidth="0dp"
                    android:minHeight="48dp"
                    android:autofillHints="noHints"/>
                <TextView
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/label_total_with_discount"
                    android:paddingStart="8dp"
                    android:paddingEnd="4dp"/>
                <TextView
                    android:textStyle="bold"
                    android:id="@+id/tvTotalWithDiscount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/zero"/>
            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="4">
                <ImageButton
                    android:id="@+id/btnAdd"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_add"
                    android:padding="12dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/desc_add"/>
                <ImageButton
                    android:id="@+id/btnDelete"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:src="@drawable/ic_delete"
                    android:padding="12dp"
                    android:contentDescription="@string/desc_delete"/>
                <ImageButton
                    android:id="@+id/btnClear"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_clear"
                    android:padding="12dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/desc_clear"/>
                <ImageButton
                    android:id="@+id/btnSave"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="1"
                    android:minWidth="48dp"
                    android:minHeight="48dp"
                    android:src="@drawable/ic_save"
                    android:padding="12dp"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:contentDescription="@string/desc_save"/>
            </LinearLayout>
        </LinearLayout>
        <ImageButton
            android:id="@+id/btnOpenFilter"
            android:layout_gravity="start|top"
            android:layout_marginStart="8dp"
            android:layout_marginTop="22dp"
            android:padding="8dp"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_filter"
            android:elevation="100dp"
            android:translationZ="100dp"
            android:clickable="true"
            android:focusable="true"
            android:contentDescription="@string/filter_button"/>
    </FrameLayout>
    <ScrollView
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#ffffff">

    <LinearLayout
        android:id="@+id/filter_panel"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_title"/>
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_type_chimney"/>
        <Spinner
            android:id="@+id/spinnerFilter1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>
        <View
            android:background="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_grade"/>
        <Spinner
            android:id="@+id/spinnerFilter2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>
        <View
            android:background="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_thickness"/>
        <Spinner
            android:id="@+id/spinnerFilter3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>
        <View
            android:background="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_type_casing"/>
        <Spinner
            android:id="@+id/spinnerFilter4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>
        <View
            android:background="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_diameter"/>
        <Spinner
            android:id="@+id/spinnerFilter5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>
        <View
            android:background="#cccccc"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="8dp"/>
        <TextView
            android:textSize="14sp"
            android:textStyle="bold"
            android:paddingBottom="4dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/filter_type"/>
        <Spinner
            android:id="@+id/spinnerFilter6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"/>
        <Button
            android:id="@+id/btnApplyFilters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/apply_filters"/>
        <Button
            android:id="@+id/btnResetFilters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/reset_filters"/>

    </LinearLayout>

    </ScrollView>
</androidx.drawerlayout.widget.DrawerLayout>
